[package]
name = "kowalski-rs"
version = "0.1.0"
authors = ["Simon Pannek"]
edition = "2021"
description = ""
repository = "https://github.com/simonpannek/kowalski-rs"

[features]
nlp-model = ["itertools", "rust-bert"]

default = []

[dependencies]
bit-vec = "0.6.3"
chrono = "0.4.19"
serde_json = "1.0"
tabled = "0.5.0"
toml = "0.5.8"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
unic-emoji-char = "0.9.0"

[dependencies.itertools]
version = "0.10.3"
optional = true

[dependencies.linked-hash-map]
version = "0.5.4"
features = ["serde_impl"]

[dependencies.rust-bert]
version = "0.17.0"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "collector", "rustls_backend", "unstable_discord_api"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-postgres]
version = "0.7.5"
features = ["with-chrono-0_4", "with-bit-vec-0_6"]
