[package]
name = "kowalski-rs"
version = "0.1.0"
authors = ["Simon Pannek"]
edition = "2021"
description = ""
repository = "https://github.com/simonpannek/kowalski-rs"

[features]
nlp-model = ["rust-bert"]

default = []

[dependencies]
bit-vec = "0.6"
chrono = "0.4"
itertools = "0.10"
serde_json = "1.0"
strum_macros = "0.24"
tabled = "0.6"
thiserror = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
unic-emoji-char = "0.9"

[dependencies.linked-hash-map]
version = "0.5"
features = ["serde_impl"]

[dependencies.rust-bert]
version = "0.17"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.11.2"
default-features = false
features = ["cache", "client", "collector", "rustls_backend", "unstable_discord_api"]

[dependencies.strum]
version = "0.24"
features = ["strum_macros"]

[dependencies.tokio]
version = "1.18"
features = ["macros", "parking_lot", "rt-multi-thread"]

[dependencies.tokio-postgres]
version = "0.7"
features = ["with-chrono-0_4", "with-bit-vec-0_6"]
